# plasma-manager.nix

./: .editorconfig  flake.nix
modules/: panels.nix  startup.nix
script/PlasmaShell/: dumpPlasmaConfig.js  handleJsonJsType.js  readAppletConfig.js  typeOf.js  writeAppletConfig.js
script/workbench/: CMakeLists.txt
script/workbench/doc/: CMakeLists.txt  index.docbook
script/workbench/src/: CMakeLists.txt  Messages.sh  main.cpp  org.nixos.plasma-manager.workbench.desktop
script/workbench/src/org/nixos/PlasmaManager/Workbench/: FilterDelegateModel.qml  PlatformMenuBar.qml  PlatformMenuBarView.qml  PlatformMenuDelegate.qml  PlatformMenuView.qml  main.qml
